--- a/package.json
+++ b/package.json
@@ -18,5 +18,8 @@
   "bugs": {
     "url": "https://github.com/freddy0fh/angular/issues"
   },
-  "homepage": "https://github.com/freddy0fh/angular#readme"
+  "homepage": "https://github.com/freddy0fh/angular#readme",
+  "dependencies": {
+    "ng-table": "^2.0.2"
+  }
 }
